--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "npx allow-only pnpm"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.59.16",
-    "axios": "^1.7.7",
+    "@trpc/client": "11.0.0-rc.638",
+    "@trpc/next": "11.0.0-rc.638",
+    "@trpc/react-query": "11.0.0-rc.638",
+    "@trpc/server": "11.0.0-rc.638",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
-    "hono": "^4.6.8",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
