--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preinstall": "npx allow-only pnpm"
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
+    "@discordjs/rest": "^2.4.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -45,6 +46,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "discord-api-types": "^0.37.105",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
