--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.59.16",
+    "@tanstack/react-table": "^8.20.5",
     "@trpc/client": "11.0.0-rc.638",
     "@trpc/next": "11.0.0-rc.638",
     "@trpc/react-query": "11.0.0-rc.638",
