--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.0",
@@ -22,16 +23,16 @@
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.59.16",
     "@tanstack/react-table": "^8.20.5",
-    "@trpc/client": "11.0.0-rc.638",
-    "@trpc/next": "11.0.0-rc.638",
-    "@trpc/react-query": "11.0.0-rc.638",
-    "@trpc/server": "11.0.0-rc.638",
+    "@trpc/client": "11.0.0-rc.340",
+    "@trpc/next": "11.0.0-rc.340",
+    "@trpc/react-query": "11.0.0-rc.340",
+    "@trpc/server": "11.0.0-rc.340",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
-    "next": "15.0.3",
+    "next": "^14.2.8",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
